# declarative

./: .gitignore  Cargo.toml  README.md  REUSE.toml  build.rs
.github/: FUNDING.yml
.reuse/: dep5
examples/: a_basics.rs  b_reactivity.rs  c_from_messages.rs  c_with_channels.rs  d_from_view.rs  d_no_channels.rs  e_coercing.rs  e_no_generics.rs  e_templates.rs  f_components.rs  f_templates.rs  g_components.rs  g_returns.rs  h_no_channels.rs  i_no_generics.rs  i_returns.rs  j_returns.rs  k_many_params.rs  y_readme.rs  z_besides.rs
gtk4/: Cargo.toml
gtk4/examples/: a_basics.rs  b_reactivity.rs  c_builders.rs  c_from_messages.rs  c_from_state.rs  d_from_messages.rs  d_from_state.rs  d_templates.rs  e_components.rs  e_from_view.rs  e_templates.rs  f_components.rs  f_returns.rs  f_templates.rs  g_components.rs  g_returns.rs  h_returns.rs  z_misc.rs
gtk4/src/: lib.rs  main.rs
macros/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
macros/src/: conditional.rs  content.rs  item.rs  lib.rs  property.rs  view.rs
macros/tests/: builder_mode.rs  construct.rs
src/: common.rs  component.rs  conditional.rs  content.rs  item.rs  lib.rs  property.rs
