# SPDX-FileCopyrightText: 2023 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

workspace.members = ['macros']

[workspace.package]
authors     = ['Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>']
categories  = ['gui']
description = 'Declarative Syntax Macros'
edition     = '2021'
keywords    = ['GUI', 'macro', 'reactive', 'view']
license     = 'Apache-2.0 OR MIT'
repository  = 'https://github.com/ejaa3/declarative/'
version     = '0.3.0'

[package]
include     = ['/LICENSES', '/src', 'build.rs', 'Cargo.toml', 'logo.svg', 'README.md']
name        = 'declarative'
authors     = { workspace = true }
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
declarative = { package = 'declarative-macros', version = '0', path = 'macros' }

[features]
builder-mode = ['declarative/builder-mode']
gtk-rs = ['builder-mode']

[dev-dependencies]
once_cell = '1'

[dev-dependencies.gtk]
default-features = false
features = ['v4_6']
package = 'gtk4'
version = '0'
