# SPDX-FileCopyrightText: 2025 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

workspace.members = ['macros']

[workspace.package]
authors     = ['Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>']
categories  = ['gui']
description = 'Generic DSL macros for easy view code manipulation'
edition     = '2021'
keywords    = ['GUI', 'macro', 'reactive', 'view']
license     = 'Apache-2.0 OR MIT'
repository  = 'https://github.com/ejaa3/declarative/'
version     = '0.7.3'

[package]
include     = ['/LICENSES', '/src', 'Cargo.toml', 'README.md']
name        = 'declarative'
authors     = { workspace = true }
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
declarative = { package = 'declarative-macros', version = '0.7.3', path = 'macros' }

[dev-dependencies]
async-channel = '2'

[dev-dependencies.gtk]
default-features = false
features = ['v4_6']
package = 'gtk4'
version = '0.10'
