# SPDX-FileCopyrightText: 2023 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
description = 'Declarative Syntax for GTK 4'
keywords    = ['adwaita', 'gnome', 'gtk4', 'GUI', 'reactive']
name        = 'declarative-gtk4'
authors     = { workspace = true }
categories  = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
declarative = { path = '..', features = ['builder-mode'] }
gtk = { version = '0', default-features = false, package = 'gtk4' }
adw = { version = '0', default-features = false, package = 'libadwaita', optional = true }

[dev-dependencies]
once_cell = '1'

[features]
dox = ['gtk/dox', 'adw?/dox']
gtk_v4_6 = ['gtk/v4_6']
gtk_v4_8 = ['gtk/v4_8', 'gtk_v4_6']
adw_v1_2 = ['adw/v1_2']
adw_v1_3 = ['adw/v1_3', 'adw_v1_2']
deprecated = []
