# SPDX-FileCopyrightText: 2025 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
exclude     = ['/tests']
name        = 'declarative-macros'
authors     = { workspace = true }
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
proc-macro = true

[dependencies]
compact_str = '0.9'
proc-macro2 = '1.0'
quote = '1.0'
syn = { version = '2.0', features = ['full', 'visit-mut'] }
